# native-research

./: App.cc  App.swift  CMakeLists.txt  Makefile  README.markdown  main.cc
.github/workflows/: build.yml
app/: App.cc  App.swift  CMakeLists.txt
app/include/: application.h
cmake/: AddSwift.cmake
include/: application.h  module.modulemap
window/: CMakeLists.txt  window.cc  window.swift
window/include/: module.modulemap  window.h
